# copilot-chat-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: cli.py  main.py
src/api/: routes.py
src/config/: settings.py
src/core/: app.py  auth.py  client.py
src/models/: requests.py
src/services/: chat.py  models.py
