[tool.poetry]
name = "copilot-chat-api"
version = "1.0.0"
description = "High-performance API for GitHub Copilot chat completions"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
httpx = {extras = ["http2"], version = "^0.28.1"}
python-multipart = "^0.0.20"
pydantic = "^2.10.4"
cachetools = "^5.5.0"
uvloop = "^0.21.0"
h11 = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
